code/force-app/main/default/objects/Private_Event_Notification__c/Private_Event_Notification__c.object-meta.xml
<CustomObject>
    <label>非公開關鍵提醒</label>
    <nameField>
        <label>事件內容</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>