code/force-app/main/default/objects/Private_Event_Notification__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>非公開關鍵提醒</relationshipLabel>
    <relationshipName>Private_Event_Notification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>