code/force-app/main/default/objects/Private_Event_Notification__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>客戶名稱</label>
    <length>160</length>
    <type>Text</type>
</CustomField>