code/force-app/main/default/objects/Private_Event_Notification__c/fields/Private_Event_Notification_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Private_Event_Notification_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>非公開關鍵提醒外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>