code/force-app/main/default/objects/Private_Event_Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>行內異常指標</fullName>
            </value>
            <value>
                <fullName>交易提醒</fullName>
            </value>
            <value>
                <fullName>金流異動</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>