code/force-app/main/default/objects/Private_Event_Notification__c/listViews/Abnormal_Key_Indicators.listView-meta.xml
<ListView>
    <fullName>Abnormal_Key_Indicators</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>行內異常指標</value>
    </filters>
    <label>行內異常指標</label>
</ListView>