code/force-app/main/default/objects/Private_Event_Notification__c/listViews/Money_Change.listView-meta.xml
<ListView>
    <fullName>Money_Change</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>金流異動</value>
    </filters>
    <label>金流異動</label>
</ListView>