code/force-app/main/default/objects/Private_Event_Notification__c/listViews/Transaction_Reminder.listView-meta.xml
<ListView>
    <fullName>Transaction_Reminder</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>交易提醒</value>
    </filters>
    <label>交易提醒</label>
</ListView>